# libraries

./: default.code-workspace
modules/crypto/cipher-aes/: README.md  pyproject.toml
modules/crypto/cipher-api/: README.md  mypy.ini  pyproject.toml
modules/crypto/cipher-api/tests/toku/cipher/api/: __init__.py  cipher_test.py
modules/crypto/cipher-api/tests/toku/crypto/cipher/api/: cipher_test.py
modules/crypto/cipher-api/toku/cipher/api/: __init__.py  cipher.py  cipher_exception.py
modules/crypto/cipher-api/toku/crypto/cipher/api/: __init__.py  cipher.py  cipher_exception.py
modules/crypto/crypto-cipher-aes/: README.md  pyproject.toml
modules/crypto/crypto-cipher-aes/tests/toku/crypto/cipher/aes/: __init__.py  aes_cipher_tests.py
modules/crypto/crypto-cipher-aes/toku/crypto/cipher/aes/: __init__.py  aes_cipher.py
modules/crypto/crypto-cipher-api/: README.md  pyproject.toml
modules/crypto/crypto-hasher-api/: .gitignore  README.md  mypy.ini  pyproject.toml
modules/crypto/crypto-hasher-sha/: README.md  pyproject.toml
modules/crypto/crypto-hasher-sha/tests/toku/crypto/hasher/sha/: __init__.py  sha1_hasher_tests.py  sha256_hasher_tests.py  sha512_hasher_tests.py
modules/crypto/crypto-hasher-sha/toku/crypto/hasher/sha/: __init__.py  sha1_hasher.py  sha256_hasher.py  sha512_hasher.py  sha_hasher.py
modules/crypto/hasher-api/: README.md  pyproject.toml
modules/crypto/hasher-api/tests/toku/crypto/hasher/api/: __init__.py
modules/crypto/hasher-api/tests/toku/hasher/api/: __init__.py  hasher_test.py
modules/crypto/hasher-api/toku/crypto/hasher/api/: __init__.py  hasher.py  hasher_exception.py
modules/crypto/hasher-api/toku/hasher/api/: __init__.py  hasher.py  hasher_exception.py
modules/crypto/hasher-sha/: README.md  pyproject.toml
modules/storage/driver-api/: README.md  pyproject.toml
modules/storage/driver-gcs/: .flake8  pyproject.toml  sa.json
modules/storage/storage-driver-local/: README.md  pyproject.toml
modules/storage/storage-driver-local/tests/toku/storage/driver/local/: __init__.py  local_storage_driver_tests.py
modules/storage/storage-driver-local/toku/storage/driver/local/: __init__.py  local_storage_driver.py
modules/storage/storage-url-api/: .coveragerc  README.md  pyproject.toml
modules/storage/storage-url-api/tests/toku/storage/url/api/: __init__.py  abstract_storage_driver_test.py  abstract_storage_url_test.py  path_sanitizer_storage_driver_decorator_tests.py  path_sanitizer_tests.py  storage_driver_test.py  storage_url_test.py  stub_storage_driver.py
modules/storage/storage-url-api/tests/toku/storage/url/api/verifier/: __init__.py  datetime_condition_verification_tests.py  file_exists_verification_tests.py  principal_verification_tests.py
modules/storage/storage-url-api/toku/storage/url/api/: __init__.py  abstract_storage_url.py  path_sanitizer_storage_driver_decorator.py  storage_driver_decorator.py  storage_url.py  storage_url_decorator.py
modules/storage/storage-url-api/toku/storage/url/api/verifier/: __init__.py  conflict_storage_url_verification_exception.py  datetime_condition_verification.py  file_exists_verification.py  forbidden_storage_url_verification_exception.py  principal_verification.py  unauthorized_storage_url_verification_exception.py
modules/storage/storage-url-api/toku/storage/url/built_in/: __init__.py  built_in_metadata_storage_url.py
modules/storage/storage-url-core/: .flake8  README.md  pyproject.toml
modules/storage/storage-url-core/tests/toku/storage/url/core/: __init__.py  url_encoded_tests.py  url_metadata_tests.py  url_streaming_tests.py  url_tests.py
modules/storage/storage-url-core/toku/storage/url/core/: __init__.py  storage_url_exception.py  url.py  url_encoded.py  url_metadata.py  url_schema.py  url_streaming.py
modules/storage/storage-url-rest/: .coveragerc  .env.template  README.md  pyproject.toml
modules/storage/storage-url-rest/src/: __init__.py
modules/storage/storage-url-rest/src/application/: __init__.py  main.py
modules/storage/storage-url-rest/src/application/mappers/: __init__.py  url_metadata_model_mapper.py  url_model_mapper.py
modules/storage/storage-url-rest/src/application/middlewares/: __init__.py
modules/storage/storage-url-rest/src/application/models/: __init__.py  url_metadata_model.py  url_model.py
modules/storage/storage-url-rest/src/application/routers/: __init__.py  url_router.py
modules/storage/storage-url-rest/src/common/: __init__.py
modules/storage/storage-url-rest/src/common/creator/: __init__.py  creator.py
modules/storage/storage-url-rest/src/common/factory/: __init__.py  factory.py
modules/storage/storage-url-rest/src/common/mapper/: __init__.py  double_mapper.py  single_mapper.py
modules/storage/storage-url-rest/src/domain/: __init__.py
modules/storage/storage-url-rest/src/domain/port/: __init__.py
modules/storage/storage-url-rest/src/domain/port/inbounds/: __init__.py  url_decode_use_case.py  url_encode_use_case.py  url_streaming_use_case.py
modules/storage/storage-url-rest/src/domain/port/outbounds/: __init__.py  url_decode_port.py  url_encode_port.py  url_streaming_port.py
modules/storage/storage-url-rest/src/domain/services/: __init__.py  url_decode_service.py  url_encode_service.py  url_streaming_service.py
modules/storage/storage-url-rest/src/infrastructure/: __init__.py
modules/storage/storage-url-rest/src/infrastructure/creators/: __init__.py  built_in_metadata_storage_url_creator.py  vcc_voucher_storage_driver_creator.py
modules/storage/storage-url-rest/src/infrastructure/factories/: __init__.py  storage_driver_factory.py  storage_url_factory.py
modules/storage/storage-url-rest/src/infrastructure/repository/: __init__.py
modules/storage/storage-url-rest/src/infrastructure/repository/storage/: __init__.py  url_decode_repository.py  url_encode_repository.py  url_streaming_repository.py
modules/storage/storage-url-rest/tests/application/routers/: __init__.py  gcs_initializer.py  url_router_test.py  vcc_voucher_url_router_tests.py
test/: pyproject.toml
test/test/: run.py
(+92 files in other folders)
