[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Nicolás Reyes <nico.reyesb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toku-crypto-cipher-aes = "==0.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
