[tool.poetry]
name = "toku-cipher-api"
version = "0.1.0"
description = "Project that provides the API for operating with cipher"
license = "Internal"
authors = [
    "Toku Dev <dev@trytoku.com>"
]
maintainers = [
    "Toku Dev <dev@trytoku.com>"
]
readme = "README.md"
homepage = "JIRA_URL"
repository = "GIT_HUB_URL"
documentation = "NOTION_URL"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries"
]
packages = [
    {include = "toku"},
    {include = "tests"}
]

[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"
overrides = "^7.4.0"

[tool.mypy]
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
exclude = ['dist']

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
