[tool.poetry]
name = "toku-storage-url-rest"
version = "0.1.0"
description = "Project that provides the rest implementation for operating with storage url"
authors = ["Toku <dev@trytoku.com>"]
license = "Internal"
readme = "README.md"
homepage = "https://www.jira.com"
repository = "https://www.github.com"
documentation = "https://www.notion.com"
packages = [
    {include = "src"},
    {include = "tests"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "==0.104.1"
uvicorn = "==0.24.0"
httpx = ">=0.22.0"
python-dotenv = "==1.0.0"
toku-storage-url-builtin = "==0.1.0"
toku-storage-driver-gcs = "==0.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "==3.0.2"
flake8 = "==6.1.0"
mypy = "==1.7.0"
black = "==23.11.0"

[tool.poetry.group.test.dependencies]
pytest = "==7.4.3"
pytest-cov = "==4.1.0"
pytest-xdist = "==3.3.1"
flexmock = "==0.11.3"
faker = "==20.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
